/*
Title: led_crosswalk.proto
Author: Miguel Angel Vinas
Date: 1st January, 2024
Purpose: Distribution's Systems CA for National College Of Ireland
*/

// We are defining the syntax (proto3 version) of the protocol buffer file
syntax = "proto3";

// We are declaring the package for the led_crosswalk service
package led_crosswalk;

//And we are defining the LEDCrosswalkService, which contains the RPC methods
service LEDCrosswalkService 
{
  rpc ActivateLEDLights(ActivateLEDLightsRequest) returns (ActivateLEDLightsResponse);
  rpc DeactivateLEDLights(DeactivateLEDLightsRequest) returns (DeactivateLEDLightsResponse); 
}

// We are defining the messages for the different requests
message ActivateLEDLightsRequest 
{
  string crosswalkId = 1;
  bool pedestrianPresence = 2;
}

message ActivateLEDLightsResponse 
{
  bool activationStatus = 1;
}

message DeactivateLEDLightsRequest 
{
  string crosswalkId = 1;
  bool pedestrianPresence = 2;
}

message DeactivateLEDLightsResponse 
{
  bool deactivationStatus = 1;
}
